# paddy-yield-ml-enterprise

./: .gitignore  EXPERIMENT_MANIFEST.md  Makefile  README.md  baseline.py  feature_prepare.py  pyproject.toml  streamlit_app.py
data/raw/: README.md
outputs/: run_all_manifest.json
outputs/carob_baseline/: group_holdout_metrics.csv  logo_fold_metrics.csv  logo_summary_metrics.csv
outputs/carob_interpretability/iter4_extratrees_primary_v1/: interpretability_runlog.txt  iteration1_feature_crosscheck.csv  iteration1_global_shap_importance.csv  iteration1_local_cases_overview.csv  iteration1_local_shap_details.csv  iteration1_model_metrics.csv  iteration1_pdp_P_fertilizer.csv  iteration1_pdp_flooded.csv  iteration1_permutation_importance.csv  iteration1_rules_english.md  iteration2_feature_stability.csv  iteration2_rule_country_generalization.csv  iteration2_rule_country_seed_evaluations.csv  iteration2_rule_seed_evaluations.csv  iteration2_rule_stability.csv  iteration2_rules_refined.csv  iteration3_action_playbook.md  iteration3_causal_handoff.md  iteration3_rule_country_generalization.csv  iteration_summary.csv  ui_top_features.csv
outputs/carob_model_compare/: model_comparison_summary.csv  train_validate_test_split_summary.csv  train_validate_test_trial_counts.csv  trial_aware_trial_metrics.csv  validation_grid_results.csv  within_trial_split_definition.csv
outputs/carob_model_tune_top2/: final_model_decision.md  learning_curve_best_model_summary.csv  model_winners.csv
scripts/: README.md  run_baseline.py
tests/: test_carob_model_compare_helpers.py
(+47 files in other folders)
